--- a/src/blocks/project/fullpage/fullpage.scss
+++ b/src/blocks/project/fullpage/fullpage.scss
@@ -1,7 +1,7 @@
 .fullpage {
   min-height: 100vh;
   background: url("../img/fullpage-bg-mb-sec.png"), url("../img/fullpage-bg-mb.jpg");
-  background-position: 50% 258px, center;
+  background-position: 50% 95%, center;
   background-repeat: no-repeat;
   background-size: 260px, cover;
 
