--- a/src/blocks/project/page-footer/page-footer.scss
+++ b/src/blocks/project/page-footer/page-footer.scss
@@ -1,16 +1,23 @@
 .page-footer {
-  display: none;
-  padding-bottom: 5px;
+  padding-bottom: 20px;
 
   @media (min-width: $screen-xl) {
-    display: block;
+    padding-bottom: 5px;
   }
 }
 
 .page-footer__row {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+
+  @media (min-width: $screen-xl) {
+    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .page-footer__text {
@@ -19,8 +26,20 @@
   line-height: 17px;
   max-width: 245px;
   width: 100%;
-
+  text-align: center;
   color: $white;
+
+  @media (min-width: $screen-xl) {
+    text-align: left;
+
+    &--right {
+      text-align: right;
+    }
+
+    &--center {
+      text-align: center;
+    }
+  }
 
   &--link {
     text-decoration: underline;
@@ -28,13 +47,5 @@
     &:hover {
       color: $white;
     }
-  }
-
-  &--right {
-    text-align: right;
-  }
-
-  &--center {
-    text-align: center;
   }
 }
