Правки по внеплановому ТЗ

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,7 @@ block content
       .container
         .main-block
           h1.main-block__title Узнайте стоимость #[span вашего будущего #[b видеоэкрана] за&nbsp;1&nbsp;минуту]
+          img.main-block__img(src="img/fullpage-bg-mb-sec.png" alt="Щит билборд")
           .main-block__reverse
             ul.main-block__list
               li.main-block__item
