--- a/src/blocks/project/main-block/main-block.scss
+++ b/src/blocks/project/main-block/main-block.scss
@@ -1,7 +1,7 @@
 .main-block {
   position: relative;
   min-height: 510px;
-  height: calc(100vh - 213px);
+  height: calc(100vh - 83px);
   max-width: 590px;
   margin: 0 auto;
 
@@ -235,5 +235,20 @@
     left: 13px;
     width: 10px;
     height: 10px;
+  }
+}
+
+.main-block__img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  z-index: 0;
+  max-width: 380px;
+  width: 100%;
+
+  @media (min-width: $screen-xl) {
+    display: none;
   }
 }
